# swagger.yaml
@@ -9,7 +9,20 @@ servers:
     description: Optional server description, e.g. Main (production) server
 
 paths:
-  /‌report:
+  /report/all:
+    get:
+      summary: Returns Report.
+      description: Optional extended description in CommonMark or HTML.
+      responses:
+        '200':  
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  type: string
+  /report:
     post:
       summary: Create Report.
       requestBody:
@@ -19,8 +32,6 @@ paths:
             schema:
               type: object
               properties:
-                id_cutomer:
-                  type: integer
                 location:
                   type: string
                 report:
